# rust_live

./: readme.md
audio_lang/: Cargo.toml  readme.md
audio_lang/src/: osc.rs
audio_player/: Cargo.toml
audio_player/src/: generating.rs  main.rs  music.rs  theremin.rs  ui.rs  util.rs
bevy_box_daw/: Cargo.toml
bevy_box_daw/.cargo/: config.toml
bevy_box_daw/src/: main.rs  mouse.rs  square.rs  util.rs  wall.rs
editor/: .gitignore  Cargo.toml
editor/res/: shader.wgsl  widgets_shader.wgsl
editor/res/samples/: 7-Audio 0001 [2022-10-25 124825].aif
editor/src/: highlight.rs  lib.rs  main.rs  ui.rs  widget.rs
editor/src/render/: background_pass.rs  buffer.rs  code_pass.rs  mod.rs  pass.rs  selections_pass.rs  system.rs  widget_vertex.rs  widgets_pass.rs
editor/src/widgets/: color_swatch.rs  mod.rs  sample.rs
editor_state/: Cargo.toml
editor_state/src/: direction.rs  editor_state.rs  lib.rs  line_data.rs  pos.rs  selection.rs
editor_state/src/widgets/: mod.rs
language/: Cargo.toml
language/src/: ast.rs  check.rs  lib.rs  main.rs  parse.rs  syntax.rs
language/src/parse_v2/: mod.rs
shader_tests/: Cargo.toml
shader_tests/examples/: sdf.rs  sdf.wgsl  sdf_1.rs  sdf_1.wgsl  sdf_2.rs  sdf_2.wgsl
shader_tests/src/: main.rs
test_audio_runtime/: Cargo.toml
test_audio_runtime/src/: main.rs  modulate.rs  music.rs  osc.rs  read_audio_file.rs  shader.wgsl  util.rs
test_fundsp/: Cargo.toml
test_fundsp/src/: main.rs
test_handmade_dsp/: Cargo.toml
test_handmade_dsp/src/: generating.rs  main.rs  sines.rs
test_shaders/examples/: base.rs  sdf_1.wgsl  sdf_2.rs  sdf_2.wgsl  sdf_3.rs  sdf_3.wgsl
theremin/: Cargo.toml
theremin/src/: main.rs  read_audio_file.rs  theremin.rs
ui_egui/: Cargo.toml
ui_egui/src/: main.rs
ui_egui/src/egui_winit/: mod.rs
ui_epaint/: Cargo.toml
ui_epaint/src/: main.rs
ui_epaint/src/epaint_integration/: mod.rs  renderer.rs  winit.rs
using_egui_eframe/: Cargo.toml
using_egui_eframe/assets/: sw.js
using_egui_eframe/src/: app.rs  main.rs
using_egui_wgpu/: Cargo.toml
using_egui_wgpu/src/: main.rs
using_egui_wgpu_old/: Cargo.toml
using_egui_wgpu_old/src/: app.rs  egui_wgpu_backend.rs  egui_winit_platform.rs  main.rs  syntax_highlighting.rs
using_egui_wgpu_old/src/app/: dash.rs  easing_dash.rs  envelope_dash.rs  mini_button.rs  mod.rs  sample_dash.rs  session_dash.rs  tab_button.rs
using_egui_wgpu_old/src/app/editor/: editor_state.rs  highlight.rs  line_data.rs  mod.rs  pos.rs  selection.rs
using_epaint_wgpu/: Cargo.toml
using_epaint_wgpu/src/: app.rs  app_2.rs  main.rs  wgpu_backend.rs  winit_platform.rs
using_epaint_wgpu/src/kgui/: context.rs  frame_state.rs  input.rs  layers.rs  memory.rs  mod.rs  output.rs
using_nannou/: Cargo.toml
using_nannou/src/: main.rs
using_winit_wgpu/: Cargo.toml
using_winit_wgpu/src/: clipboard.rs  highlight.rs  lib.rs  util.rs
using_winit_wgpu/src/render/: buffer.rs  mod.rs
using_winit_wgpu/src/state/: line_data.rs  mod.rs  pos.rs  selection.rs
using_winit_wgpu/src/state/widgets/: sample.rs
