[package]
name = "egui_example"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"

[dependencies]
chrono = "0.4.26"
pollster = "0.2"
egui = { version = "0.22", features = ["color-hex", "bytemuck"] }
wgpu = "0.17"
winit = { version = "0.28.6", features = ["x11"] }
color-hex = "0.2.0"
bytemuck = "1.13.1"
