[package]
name = "egui_example"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"

[dependencies]
chrono = "0.4.26"
pollster = "0.2"
egui = { version = "0.22", features = ["color-hex", "bytemuck"] }
wgpu = "0.17"
winit = { version = "0.28.6", features = ["x11"] }
color-hex = "0.2.0"
bytemuck = "1.13.1"
symphonia = { version = "0.5.3", features = ["all"] }
env_logger = "0.10.0"
itertools = "0.11.0"
emath = "0.22.0"
enum-map = "2.6.1"
tinyset = "0.4.15"
debug_unreachable = "0.1.1"
spectrum-analyzer = "1.4.0"
cpal = "0.15.2"
float-cmp = "0.9.0"
